--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 	<link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+	<script src="./assets/javascript/on-off-switch.js"></script>
+	<script src="./assets/javascript/on-off-switch-onload.js"></script>
+	<link rel="stylesheet" href="./assets/css/on-off-switch.css">
 </head>
 <body id="background">
 	<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -25,13 +30,523 @@
 	    	</div>
 	  	</div>
 	</nav>
+	
+	<div class="main-contianer">
+		<div class="content">
+			<div>
+				<h3>Walls<h3>
+			</div>
+			<div class="row">
+				<div class="col-md-1">
+					<input type="hidden" class="on-off-switch-custom1" value="0">
+					<div><p>Clean</p></div>	
+				</div>
+				<div class="col-md-1">
+					<input type="hidden" class="on-off-switch-custom2" value="0">
+					<div><p>Undamaged</p></div>	
+				</div>
+				<div class="col-md-1">
+					<input type="hidden" class="on-off-switch-custom3" value="0">
+					<div><p>Working</p></div>	
+				</div>
+				<div class="col-md-1">
+					<input type="hidden" class="on-off-switch-custom4" value="0">
+					<div><p>Tenant Agrees</p></div>	
+				</div>
+				<div class="col-md-1" class="add-image">
+					<p>add image????</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="main-contianer">
+		<div class="content">
+			<div>
+				<h3>Ceiling<h3>
+			</div>
+			<div class="row">
+				<div class="col-md-1">
+					<input type="hidden" class="on-off-switch-custom5" value="0">
+					<div><p>Clean</p></div>	
+				</div>
+				<div class="col-md-1">
+					<input type="hidden" class="on-off-switch-custom6" value="0">
+					<div><p>Undamaged</p></div>	
+				</div>
+				<div class="col-md-1">
+					<input type="hidden" class="on-off-switch-custom7" value="0">
+					<div><p>Working</p></div>	
+				</div>
+				<div class="col-md-1">
+					<input type="hidden" class="on-off-switch-custom8" value="0">
+					<div><p>Tenant Agrees</p></div>	
+				</div>
+				<div class="col-md-1" class="add-image">
+					<p>add image????</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="main-contianer">
+		<div class="content">
+			<div>
+				<h3>Flooring<h3>
+			</div>
+			<div class="row">
+				<div class="col-md-1">
+					<input type="hidden" class="on-off-switch-custom9" value="0">
+					<div><p>Clean</p></div>	
+				</div>
+				<div class="col-md-1">
+					<input type="hidden" class="on-off-switch-custom10" value="0">
+					<div><p>Undamaged</p></div>	
+				</div>
+				<div class="col-md-1">
+					<input type="hidden" class="on-off-switch-custom11" value="0">
+					<div><p>Working</p></div>	
+				</div>
+				<div class="col-md-1">
+					<input type="hidden" class="on-off-switch-custom12" value="0">
+					<div><p>Tenant Agrees</p></div>	
+				</div>
+				<div class="col-md-1" class="add-image">
+					<p>add image????</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="main-contianer">
+		<div class="content">
+			<div>
+				<h3>Baseboards<h3>
+			</div>
+			<div class="row">
+				<div class="col-md-1">
+					<input type="hidden" class="on-off-switch-custom13" value="0">
+					<div><p>Clean</p></div>	
+				</div>
+				<div class="col-md-1">
+					<input type="hidden" class="on-off-switch-custom14" value="0">
+					<div><p>Undamaged</p></div>	
+				</div>
+				<div class="col-md-1">
+					<input type="hidden" class="on-off-switch-custom15" value="0">
+					<div><p>Working</p></div>	
+				</div>
+				<div class="col-md-1">
+					<input type="hidden" class="on-off-switch-custom16" value="0">
+					<div><p>Tenant Agrees</p></div>	
+				</div>
+				<div class="col-md-1" class="add-image">
+					<p>add image????</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="main-contianer">
+		<div class="content">
+			<div>
+				<h3>Lights<h3>
+			</div>
+			<div class="row">
+				<div class="col-md-1">
+					<input type="hidden" class="on-off-switch-custom17" value="0">
+					<div><p>Clean</p></div>	
+				</div>
+				<div class="col-md-1">
+					<input type="hidden" class="on-off-switch-custom18" value="0">
+					<div><p>Undamaged</p></div>	
+				</div>
+				<div class="col-md-1">
+					<input type="hidden" class="on-off-switch-custom19" value="0">
+					<div><p>Working</p></div>	
+				</div>
+				<div class="col-md-1">
+					<input type="hidden" class="on-off-switch-custom20" value="0">
+					<div><p>Tenant Agrees</p></div>	
+				</div>
+				<div class="col-md-1" class="add-image">
+					<p>add image????</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="main-contianer">
+		<div class="content">
+			<div>
+				<h3>Power Outlets<h3>
+			</div>
+			<div class="row">
+				<div class="col-md-1">
+					<input type="hidden" class="on-off-switch-custom21" value="0">
+					<div><p>Clean</p></div>	
+				</div>
+				<div class="col-md-1">
+					<input type="hidden" class="on-off-switch-custom22" value="0">
+					<div><p>Undamaged</p></div>	
+				</div>
+				<div class="col-md-1">
+					<input type="hidden" class="on-off-switch-custom23" value="0">
+					<div><p>Working</p></div>	
+				</div>
+				<div class="col-md-1">
+					<input type="hidden" class="on-off-switch-custom24" value="0">
+					<div><p>Tenant Agrees</p></div>	
+				</div>
+				<div class="col-md-1" class="add-image">
+					<p>add image????</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="main-contianer">
+		<div class="content">
+			<div>
+				<h3>Fan<h3>
+			</div>
+			<div class="row">
+				<div class="col-md-1">
+					<input type="hidden" class="on-off-switch-custom25" value="0">
+					<div><p>Clean</p></div>	
+				</div>
+				<div class="col-md-1">
+					<input type="hidden" class="on-off-switch-custom26" value="0">
+					<div><p>Undamaged</p></div>	
+				</div>
+				<div class="col-md-1">
+					<input type="hidden" class="on-off-switch-custom27" value="0">
+					<div><p>Working</p></div>	
+				</div>
+				<div class="col-md-1">
+					<input type="hidden" class="on-off-switch-custom28" value="0">
+					<div><p>Tenant Agrees</p></div>	
+				</div>
+				<div class="col-md-1" class="add-image">
+					<p>add image????</p>
+				</div>
+			</div>
+		</div>
+	</div>
 
 
 
-	<script type="text/javascript">
-		//
+    <script type="text/javascript">
+    	//switch//
+        new DG.OnOffSwitch
+        ({
+            el: '.on-off-switch-custom1',
+            height: 30,
+            trackColorOn:'forestgreen',
+            trackColorOff:'firebrick',
+            trackBorderColor:'#555',
+            textColorOff:'#fff',
+            textOn:'YES',
+            textOff:'NO'
+        });
+        new DG.OnOffSwitch
+        ({
+            el: '.on-off-switch-custom2',
+            height: 30,
+            trackColorOn:'forestgreen',
+            trackColorOff:'firebrick',
+            trackBorderColor:'#555',
+            textColorOff:'#fff',
+            textOn:'YES',
+            textOff:'NO'
+        });
+        new DG.OnOffSwitch
+        ({
+            el: '.on-off-switch-custom3',
+            height: 30,
+            trackColorOn:'forestgreen',
+            trackColorOff:'firebrick',
+            trackBorderColor:'#555',
+            textColorOff:'#fff',
+            textOn:'YES',
+            textOff:'NO'
+        });
+        new DG.OnOffSwitch
+        ({
+            el: '.on-off-switch-custom4',
+            height: 30,
+            trackColorOn:'forestgreen',
+            trackColorOff:'firebrick',
+            trackBorderColor:'#555',
+            textColorOff:'#fff',
+            textOn:'YES',
+            textOff:'NO'
+        });
+                new DG.OnOffSwitch
+        ({
+            el: '.on-off-switch-custom5',
+            height: 30,
+            trackColorOn:'forestgreen',
+            trackColorOff:'firebrick',
+            trackBorderColor:'#555',
+            textColorOff:'#fff',
+            textOn:'YES',
+            textOff:'NO'
+        });
+        new DG.OnOffSwitch
+        ({
+            el: '.on-off-switch-custom6',
+            height: 30,
+            trackColorOn:'forestgreen',
+            trackColorOff:'firebrick',
+            trackBorderColor:'#555',
+            textColorOff:'#fff',
+            textOn:'YES',
+            textOff:'NO'
+        });
+        new DG.OnOffSwitch
+        ({
+            el: '.on-off-switch-custom7',
+            height: 30,
+            trackColorOn:'forestgreen',
+            trackColorOff:'firebrick',
+            trackBorderColor:'#555',
+            textColorOff:'#fff',
+            textOn:'YES',
+            textOff:'NO'
+        });
+        new DG.OnOffSwitch
+        ({
+            el: '.on-off-switch-custom8',
+            height: 30,
+            trackColorOn:'forestgreen',
+            trackColorOff:'firebrick',
+            trackBorderColor:'#555',
+            textColorOff:'#fff',
+            textOn:'YES',
+            textOff:'NO'
+        });
+        new DG.OnOffSwitch
+        ({
+            el: '.on-off-switch-custom9',
+            height: 30,
+            trackColorOn:'forestgreen',
+            trackColorOff:'firebrick',
+            trackBorderColor:'#555',
+            textColorOff:'#fff',
+            textOn:'YES',
+            textOff:'NO'
+        });
+        new DG.OnOffSwitch
+        ({
+            el: '.on-off-switch-custom10',
+            height: 30,
+            trackColorOn:'forestgreen',
+            trackColorOff:'firebrick',
+            trackBorderColor:'#555',
+            textColorOff:'#fff',
+            textOn:'YES',
+            textOff:'NO'
+        });
+        new DG.OnOffSwitch
+        ({
+            el: '.on-off-switch-custom11',
+            height: 30,
+            trackColorOn:'forestgreen',
+            trackColorOff:'firebrick',
+            trackBorderColor:'#555',
+            textColorOff:'#fff',
+            textOn:'YES',
+            textOff:'NO'
+        });
+        new DG.OnOffSwitch
+        ({
+            el: '.on-off-switch-custom12',
+            height: 30,
+            trackColorOn:'forestgreen',
+            trackColorOff:'firebrick',
+            trackBorderColor:'#555',
+            textColorOff:'#fff',
+            textOn:'YES',
+            textOff:'NO'
+        });
+                new DG.OnOffSwitch
+        ({
+            el: '.on-off-switch-custom13',
+            height: 30,
+            trackColorOn:'forestgreen',
+            trackColorOff:'firebrick',
+            trackBorderColor:'#555',
+            textColorOff:'#fff',
+            textOn:'YES',
+            textOff:'NO'
+        });
+        new DG.OnOffSwitch
+        ({
+            el: '.on-off-switch-custom14',
+            height: 30,
+            trackColorOn:'forestgreen',
+            trackColorOff:'firebrick',
+            trackBorderColor:'#555',
+            textColorOff:'#fff',
+            textOn:'YES',
+            textOff:'NO'
+        });
+        new DG.OnOffSwitch
+        ({
+            el: '.on-off-switch-custom15',
+            height: 30,
+            trackColorOn:'forestgreen',
+            trackColorOff:'firebrick',
+            trackBorderColor:'#555',
+            textColorOff:'#fff',
+            textOn:'YES',
+            textOff:'NO'
+        });
+        new DG.OnOffSwitch
+        ({
+            el: '.on-off-switch-custom16',
+            height: 30,
+            trackColorOn:'forestgreen',
+            trackColorOff:'firebrick',
+            trackBorderColor:'#555',
+            textColorOff:'#fff',
+            textOn:'YES',
+            textOff:'NO'
+        });
+        new DG.OnOffSwitch
+        ({
+            el: '.on-off-switch-custom17',
+            height: 30,
+            trackColorOn:'forestgreen',
+            trackColorOff:'firebrick',
+            trackBorderColor:'#555',
+            textColorOff:'#fff',
+            textOn:'YES',
+            textOff:'NO'
+        });
+        new DG.OnOffSwitch
+        ({
+            el: '.on-off-switch-custom18',
+            height: 30,
+            trackColorOn:'forestgreen',
+            trackColorOff:'firebrick',
+            trackBorderColor:'#555',
+            textColorOff:'#fff',
+            textOn:'YES',
+            textOff:'NO'
+        });
+        new DG.OnOffSwitch
+        ({
+            el: '.on-off-switch-custom19',
+            height: 30,
+            trackColorOn:'forestgreen',
+            trackColorOff:'firebrick',
+            trackBorderColor:'#555',
+            textColorOff:'#fff',
+            textOn:'YES',
+            textOff:'NO'
+        });
+        new DG.OnOffSwitch
+        ({
+            el: '.on-off-switch-custom20',
+            height: 30,
+            trackColorOn:'forestgreen',
+            trackColorOff:'firebrick',
+            trackBorderColor:'#555',
+            textColorOff:'#fff',
+            textOn:'YES',
+            textOff:'NO'
+        });
+                new DG.OnOffSwitch
+        ({
+            el: '.on-off-switch-custom21',
+            height: 30,
+            trackColorOn:'forestgreen',
+            trackColorOff:'firebrick',
+            trackBorderColor:'#555',
+            textColorOff:'#fff',
+            textOn:'YES',
+            textOff:'NO'
+        });
+        new DG.OnOffSwitch
+        ({
+            el: '.on-off-switch-custom22',
+            height: 30,
+            trackColorOn:'forestgreen',
+            trackColorOff:'firebrick',
+            trackBorderColor:'#555',
+            textColorOff:'#fff',
+            textOn:'YES',
+            textOff:'NO'
+        });
+        new DG.OnOffSwitch
+        ({
+            el: '.on-off-switch-custom23',
+            height: 30,
+            trackColorOn:'forestgreen',
+            trackColorOff:'firebrick',
+            trackBorderColor:'#555',
+            textColorOff:'#fff',
+            textOn:'YES',
+            textOff:'NO'
+        });
+        new DG.OnOffSwitch
+        ({
+            el: '.on-off-switch-custom24',
+            height: 30,
+            trackColorOn:'forestgreen',
+            trackColorOff:'firebrick',
+            trackBorderColor:'#555',
+            textColorOff:'#fff',
+            textOn:'YES',
+            textOff:'NO'
+        });
+                        new DG.OnOffSwitch
+        ({
+            el: '.on-off-switch-custom25',
+            height: 30,
+            trackColorOn:'forestgreen',
+            trackColorOff:'firebrick',
+            trackBorderColor:'#555',
+            textColorOff:'#fff',
+            textOn:'YES',
+            textOff:'NO'
+        });
+        new DG.OnOffSwitch
+        ({
+            el: '.on-off-switch-custom26',
+            height: 30,
+            trackColorOn:'forestgreen',
+            trackColorOff:'firebrick',
+            trackBorderColor:'#555',
+            textColorOff:'#fff',
+            textOn:'YES',
+            textOff:'NO'
+        });
+        new DG.OnOffSwitch
+        ({
+            el: '.on-off-switch-custom27',
+            height: 30,
+            trackColorOn:'forestgreen',
+            trackColorOff:'firebrick',
+            trackBorderColor:'#555',
+            textColorOff:'#fff',
+            textOn:'YES',
+            textOff:'NO'
+        });
+        new DG.OnOffSwitch
+        ({
+            el: '.on-off-switch-custom28',
+            height: 30,
+            trackColorOn:'forestgreen',
+            trackColorOff:'firebrick',
+            trackBorderColor:'#555',
+            textColorOff:'#fff',
+            textOn:'YES',
+            textOff:'NO'
+        });
+    </script>
 
-
-	</script>
 </body>
 </html>
