--- a/index.html
+++ b/index.html
@@ -22,17 +22,11 @@
   		<a class="navbar-brand" href="#"><img src="./assets/images/Logo.png" alt="Logo" id="logo"></a>
 	 	<div id="navbarColor01" id="menu-outer">
 	 		<div class="table">
-		    	<ul id="horizontal-list">
-		      		<li class="nav-item"><button type="button" class="btn btn-outline-primary"><img src="./assets/images/Entry.png" alt="Entry" class="room-image"></button>Entry</li>
-		      		<li class="nav-item"><button type="button" class="btn btn-outline-primary"><img src="./assets/images/LivingRoom.png" alt="LivingRoom" class="room-image"></button>LvingRoom</li>
-		      		<li class="nav-item"><button type="button" class="btn btn-outline-primary"><img src="./assets/images/DiningRoom.png" alt="DiningRoom" class="room-image"></button>DiningRoom</li>
-		      		<li class="nav-item"><button type="button" class="btn btn-outline-primary"><img src="./assets/images/Kitchen.png" alt="Kitchen" class="room-image"></button>Kitchen</li>
-		      		<li class="nav-item"><button type="button" class="btn btn-outline-primary"><img src="./assets/images/Bedroom1.png" alt="Bedroom1" class="room-image"></button>BedRoom1</li>
-		      		<li class="nav-item"><button type="button" class="btn btn-outline-primary"><img src="./assets/images/Bedroom2.png" alt="Bedroom2" class="room-image"></button>BedRoom2</li>
-		      		<li class="nav-item"><button type="button" class="btn btn-outline-primary"><img src="./assets/images/Bathroom1.png" alt="Bathroom1" class="room-image"></button>Bathroom1</li>
-		      		<li class="nav-item"><button type="button" class="btn btn-outline-primary"><img src="./assets/images/Bathroom2.png" alt="Bathroom2" class="room-image"></button>Bathroom2</li>
-		      		<li class="nav-item"><button type="button" class="btn btn-outline-primary"><img src="./assets/images/Laundry.png" alt="Laundry" class="room-image"></button>Stairs/Halls</li>
-		    	</ul>
+		    	<ul id="horizontal-list" class="navbar-nav justify-content-end">
+		    		<li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+				    <li class="nav-item"><a class="nav-link" href="#">Properties</a></li>
+				    <li class="nav-item"><a class="nav-link" href="#">Login</a></li>
+    			</ul>
 	    	</div>
 	  	</div>
 	</nav>
@@ -48,15 +42,15 @@
 		</div>
 			 <div class="table">
 		    	<ul id="horizontal-list">
-		      		<li class="nav-item"><button type="button" class="btn btn-outline-primary"><img src="./assets/images/Entry.png" alt="Entry" class="room-image">Entry</button></li>
-		      		<li class="nav-item"><button type="button" class="btn btn-outline-primary"><img src="./assets/images/LivingRoom.png" alt="LivingRoom" class="room-image"> LvingRoom</button></li>
-		      		<li class="nav-item"><button type="button" class="btn btn-outline-primary"><img src="./assets/images/DiningRoom.png" alt="DiningRoom" class="room-image"> DiningRoom</button></li>
-		      		<li class="nav-item"><button type="button" class="btn btn-outline-primary"><img src="./assets/images/Kitchen.png" alt="Kitchen" class="room-image"> Kitchen</button></li>
-		      		<li class="nav-item"><button type="button" class="btn btn-outline-primary"><img src="./assets/images/Bedroom1.png" alt="Bedroom1" class="room-image"> BedRoom1</button></li>
-		      		<li class="nav-item"><button type="button" class="btn btn-outline-primary"><img src="./assets/images/Bedroom2.png" alt="Bedroom2" class="room-image"> BedRoom2</button></li>
-		      		<li class="nav-item"><button type="button" class="btn btn-outline-primary"><img src="./assets/images/Bathroom1.png" alt="Bathroom1" class="room-image"> Bathroom1</button></li>
-		      		<li class="nav-item"><button type="button" class="btn btn-outline-primary"><img src="./assets/images/Bathroom2.png" alt="Bathroom2" class="room-image"> Bathroom2</button></li>
-		      		<li class="nav-item"><button type="button" class="btn btn-outline-primary"><img src="./assets/images/Laundry.png" alt="Laundry" class="room-image"> Stairs/Halls</button></li>
+		      		<li><button type="button" class="btn btn-outline-primary"><img src="./assets/images/Entry.png" alt="Entry" class="room-image">Entry</button></li>
+		      		<li><button type="button" class="btn btn-outline-primary"><img src="./assets/images/LivingRoom.png" alt="LivingRoom" class="room-image"> LvingRoom</button></li>
+		      		<li><button type="button" class="btn btn-outline-primary"><img src="./assets/images/DiningRoom.png" alt="DiningRoom" class="room-image"> DiningRoom</button></li>
+		      		<li><button type="button" class="btn btn-outline-primary"><img src="./assets/images/Kitchen.png" alt="Kitchen" class="room-image"> Kitchen</button></li>
+		      		<li><button type="button" class="btn btn-outline-primary"><img src="./assets/images/Bedroom1.png" alt="Bedroom1" class="room-image"> BedRoom1</button></li>
+		      		<li><button type="button" class="btn btn-outline-primary"><img src="./assets/images/Bedroom2.png" alt="Bedroom2" class="room-image"> BedRoom2</button></li>
+		      		<li><button type="button" class="btn btn-outline-primary"><img src="./assets/images/Bathroom1.png" alt="Bathroom1" class="room-image"> Bathroom1</button></li>
+		      		<li><button type="button" class="btn btn-outline-primary"><img src="./assets/images/Bathroom2.png" alt="Bathroom2" class="room-image"> Bathroom2</button></li>
+		      		<li><button type="button" class="btn btn-outline-primary"><img src="./assets/images/Laundry.png" alt="Laundry" class="room-image"> Stairs/Halls</button></li>
 		    	</ul>
 	    	</div>
 	</div>
